# LitterBox

./: .gitignore  .gitreview  BUILD  MODULE.bazel  Makefile  README.md  go.mod  lint.sh  litter_box.py  litter_box_test.py
tools/format/: BUILD  linters.bzl
