bazel_dep(name = "rules_python", version = "0.40.0")
bazel_dep(name = "aspect_rules_lint", version = "1.0.3")
bazel_dep(name = "buildifier_prebuilt", version = "7.3.1")
bazel_dep(name = "rules_oci", version = "2.0.1")
bazel_dep(name = "aspect_bazel_lib", version = "2.9.3")

pip = use_extension("@rules_python//python/extensions:pip.bzl", "pip")
pip.parse(
    hub_name = "pypi",
    python_version = "3.11",
    requirements_lock = "//:requirements.txt",
)
use_repo(pip, "pypi")

oci = use_extension("@rules_oci//oci:extensions.bzl", "oci")
oci.pull(
    name = "python_base",
    digest = "sha256:370c586a6ffc8c619e6d652f81c094b34b14b8f2fb9251f092de23f16e299b78",
    image = "python:3.11-slim",
    platforms = [
        "linux/amd64",
        "linux/arm64",
    ],
)
use_repo(oci, "python_base")
